@@ -7,6 +7,7 @@ ver 0.21.6 (not yet released)
   - cdio_paranoia: fix build failure due to missing #include
 * decoder
   - opus: fix replay gain when there are no other tags
+  - opus: fix seeking to beginning of song
 * output
   - pulse: work around error with unusual channel count
   - osx: fix build failure
